--- a/Inicio.html
+++ b/Inicio.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Estrella De Dimas</title>
-    <link rel="stylesheet" href="Estilo.css" />
+    <link rel="stylesheet" href="CSS/Estilo.css" />
     
 </head>
 
@@ -27,7 +27,9 @@
                     </div>
                 </div>
                 <div class="container-user">
-                    <i class="fa-solid fa-user" style="color: #011941;"></i>
+                    <a href="Login.html" style="text-decoration: none;">
+                        <i class="fa-solid fa-user" style="color: #011941;"></i>
+                    </a>
                 </div>
             </div>
         </div>
